chore: cleaning some code